@@ -805,6 +805,17 @@ wrapper_call(wrapperobject *wp, PyObject *args, PyObject *kwds)
 	wrapperfunc wrapper = wp->descr->d_base->wrapper;
 	PyObject *self = wp->self;
 
+	if (wp->descr->d_base->flags & PyWrapperFlag_KEYWORDS) {
+		wrapperfunc_kwds wk = (wrapperfunc_kwds)wrapper;
+		return (*wk)(self, args, wp->descr->d_wrapped, kwds);
+	}
+
+	if (kwds != NULL && (!PyDict_Check(kwds) || PyDict_Size(kwds) != 0)) {
+		PyErr_Format(PyExc_TypeError,
+			     "wrapper %s doesn't take keyword arguments",
+			     wp->descr->d_base->name);
+		return NULL;
+	}
 	return (*wrapper)(self, args, wp->descr->d_wrapped);
 }
 
